--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "ramsey/uuid": "~3.6",
     "guzzlehttp/guzzle": "~6.2",
     "php-amqplib/php-amqplib": "~2.6",
+    "nesbot/carbon": "~1.22",
     "fxp/composer-asset-plugin": "^1.3.1"
   },
   "require-dev": {
