--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "guzzlehttp/guzzle": "~6.2",
     "php-amqplib/php-amqplib": "~2.6",
     "nesbot/carbon": "~1.22",
+    "bandwidth-throttle/token-bucket": "~1.1",
     "fxp/composer-asset-plugin": "^1.3.1"
   },
   "require-dev": {
