--- a/codeception.yml
+++ b/codeception.yml
@@ -1,8 +1,8 @@
 # global codeception file to run tests from all apps
 include:
-    - common
-    - frontend
-    - backend
+#    - common
+#    - admin
+    - www
 paths:
     log: console/runtime/logs
 settings:
