--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,8 @@
   "require-dev": {
     "yiisoft/yii2-debug": "~2.0.0",
     "yiisoft/yii2-faker": "~2.0.0",
-    "codeception/base": "^2.2.3",
-    "codeception/verify": "~0.3.0"
+    "codeception/codeception": "~2.3.0",
+    "codeception/verify": "~1.0.0"
   },
   "config": {
     "preferred-install": "dist",
