--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "yiisoft/yii2-debug": "~2.0.0",
     "yiisoft/yii2-faker": "~2.0.0",
     "codeception/codeception": "~2.3.0",
-    "codeception/verify": "~1.0.0"
+    "codeception/verify": "~1.0.0",
+    "fzaninotto/faker": "~1.7.0"
   },
   "config": {
     "preferred-install": "dist",
