--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
   "repositories": {
     "packagist": {
       "type": "composer",
-      "url": "https://packagist.laravel-china.org"
+      "url": "https://packagist.jp"
     }
   }
 }
